Passed data into details fragment

--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -32,27 +32,14 @@
         android:layout_height="match_parent"
         tools:context="com.example.android.marsrealestate.MainActivity">
 
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          app:layout_constraintTop_toTopOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          android:orientation="horizontal">
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_weight="1"
-              android:textSize="14sp"
-              android:text="@{viewModel.teams.home.name}"
-              android:layout_height="match_parent"/>
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_weight="1"
-              android:textSize="14sp"
-              android:text="@{viewModel.allResponse}"
-              android:layout_height="match_parent"/>
-
-      </LinearLayout>
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_games"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
