--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -19,12 +19,7 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/show_all_menu"
-        android:title="@string/show_all" />
-    <item
-        android:id="@+id/show_rent_menu"
-        android:title="@string/show_rent" />
-    <item
-        android:id="@+id/show_buy_menu"
-        android:title="@string/show_buy" />
+        android:id="@+id/mi_refresh"
+        android:title="@string/refresh" />
+
 </menu>
