--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="yellow">#F9A825</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
